--- a/app_store/android/app/src/main/AndroidManifest.xml
+++ b/app_store/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dugfers.app_store">
    <application
-        android:label="app_store"
+        android:label="Loja Virtual"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
