--- a/app_store/pubspec.yaml
+++ b/app_store/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_auth: ^3.4.2
   url_launcher: ^6.1.5
   firebase_core: ^1.19.2
+  flutter_launcher_icons: ^0.9.3
   
 dev_dependencies:
   flutter_test:
@@ -99,3 +100,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/icon_store.png"
